--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
         }
         /*Estilo rodape*/
         footer{
-
+            Background: linear-gradient(135deg, #750591 0%, #4a99ff 50%, #ff08ff 100%);
+            color: #e7da19;
+            text-align: center;
+            padding: 1rem;
+            margin-top: auto;
         }
 
     </style>
@@ -67,8 +71,12 @@
     <header>
         <h1>Alimentos</h1>
 
+
     </header>
+
+    <footer>Boom boom pow</footer>
 <!-- Conteúdo da página aqui -->
 
 </body>
 </html>
+
