--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
     </header>
 
-    <footer>Boom boom pow</footer>
+    <footer>
+        <p>Boom boom pow</p></footer>
 <!-- Conteúdo da página aqui -->
 
 </body>
 </html>
-
